--- a/sVanilla/resource/sVanilla.qrc
+++ b/sVanilla/resource/sVanilla.qrc
@@ -1,1 +1,11 @@
-<RCC/>
+<RCC>
+    <qresource prefix="/MainWindow">
+        <file>download.svg</file>
+        <file>grid.svg</file>
+        <file>file-text.svg</file>
+        <file>server.svg</file>
+        <file>search.svg</file>
+        <file>settings.svg</file>
+        <file>sort.svg</file>
+    </qresource>
+</RCC>
