--- a/sVanilla/src/SUI/Tips/TipDialog.ui
+++ b/sVanilla/src/SUI/Tips/TipDialog.ui
@@ -1,44 +1,44 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
-    <class>TipDialog</class>
-    <widget class="QDialog" name="TipDialog">
-        <property name="geometry">
-            <rect>
-                <x>0</x>
-                <y>0</y>
-                <width>453</width>
-                <height>48</height>
-            </rect>
-        </property>
-        <property name="windowTitle">
-            <string>TipDialog</string>
-        </property>
-        <widget class="QPushButton" name="btnSearch">
-            <property name="geometry">
-                <rect>
-                    <x>410</x>
-                    <y>8</y>
-                    <width>32</width>
-                    <height>32</height>
-                </rect>
-            </property>
-            <property name="styleSheet">
-                <string notr="true">.QPushButton
+ <class>TipDialog</class>
+ <widget class="QDialog" name="TipDialog">
+  <property name="geometry">
+   <rect>
+    <x>0</x>
+    <y>0</y>
+    <width>453</width>
+    <height>48</height>
+   </rect>
+  </property>
+  <property name="windowTitle">
+   <string>TipDialog</string>
+  </property>
+  <widget class="QPushButton" name="btnSearch">
+   <property name="geometry">
+    <rect>
+     <x>410</x>
+     <y>8</y>
+     <width>32</width>
+     <height>32</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">.QPushButton
 {
 border-radius:4px;
 border:none;
 padding:4px;
-image:url(:/MainWindow/search.svg);
+image:url(:/icon/search.svg);
 }</string>
-            </property>
-            <property name="text">
-                <string/>
-            </property>
-        </widget>
-    </widget>
-    <layoutdefault spacing="6" margin="11"/>
-    <resources>
-        <include location="../../../Resource/MainWindow.qrc"/>
-    </resources>
-    <connections/>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+ </widget>
+ <layoutdefault spacing="6" margin="11"/>
+ <resources>
+  <include location="../../../resource/sVanilla.qrc"/>
+ </resources>
+ <connections/>
 </ui>
