--- a/sVanilla/resource/style/dark.qss
+++ b/sVanilla/resource/style/dark.qss
@@ -1,116 +1,16 @@
-/* Window bar */
-
-QWK--WindowBar[bar-active=true] {
-    background-color: #3C3C3C;
-}
-
-QWK--WindowBar[bar-active=false] {
-    background-color: #505050;
-}
-
-
-/* Title label */
-
-QWK--WindowBar>QLabel#win-title-label {
-    padding: 0;
-    border: none;
-    color: #ECECEC;
-    background-color: transparent;
-    min-height: 28px;
-}
-
-
-/* System buttons */
-
-QWK--WindowBar>QAbstractButton[system-button=true] {
-    qproperty-iconSize: 12px 12px;
-    min-width: 50px;
-    border: none;
-    padding: 0;
-    background-color: transparent;
-}
-
-QWK--WindowBar>QAbstractButton#min-button {
-    qproperty-iconNormal: url(":/MainWindow/minimize.svg");
-    qproperty-iconSize: 12px 12px;
-}
-
-QWK--WindowBar>QAbstractButton#min-button:hover,
-QWK--WindowBar>QAbstractButton#min-button:pressed {
-    background-color: rgba(255, 255, 255, 15%);
-}
-
-QWK--WindowBar>QAbstractButton#max-button {
-    qproperty-iconNormal: url(":/MainWindow/maximize.svg");
-    qproperty-iconChecked: url(":/MainWindow/restore.svg");
-}
-
-QWK--WindowBar>QAbstractButton#max-button:hover,
-QWK--WindowBar>QAbstractButton#max-button:pressed {
-    background-color: rgba(255, 255, 255, 15%);
-}
-
-QWK--WindowBar>QAbstractButton#close-button {
-    qproperty-iconNormal: url(":/MainWindow/close.svg");
-}
-
-QWK--WindowBar>QAbstractButton#close-button:hover,
-QWK--WindowBar>QAbstractButton#close-button:pressed {
-    background-color: #e81123;
-}
-
-
-/* Icon button */
-
-/* QWK--WindowBar>QAbstractButton#icon-button {
-    qproperty-iconNormal: url(":/app/example.png");
-    qproperty-iconSize: 18px 18px;
-    min-width: 40px;
-    border: none;
-    padding: 0;
-    background-color: transparent;
-} */
-
-
-/* Menu Bar */
-
-QMenuBar {
-    background-color: transparent;
-    border: none;
-}
-
-QMenuBar>QToolButton#qt_menubar_ext_button {
-    qproperty-icon: url(":/MainWindow/more-line.svg");
-}
-
-QMenuBar>QToolButton#qt_menubar_ext_button:hover,
-QMenuBar>QToolButton#qt_menubar_ext_button:pressed {
-    background-color: rgba(255, 255, 255, 10%);
-}
-
-QMenuBar::item {
-    color: #CCCCCC;
-    border: none;
-    padding: 8px 12px;
-}
-
-QMenuBar::item:selected {
-    background-color: rgba(255, 255, 255, 10%);
-}
-
-
 /* Menu */
 
 QMenu {
     padding: 4px;
-    background: #303030;
-    border: 1px solid transparent;
+    background: #757575;
+    border: none;
+    border-radius: 5px;
 }
 
 QMenu::indicator {
     left: 6px;
     width: 20px;
-    height: 20px;
+    height: 5px;
 }
 
 QMenu::icon {
@@ -119,23 +19,23 @@ QMenu::icon {
 
 QMenu::item {
     background: transparent;
-    color: #CCCCCC;
-    padding: 6px 24px;
+    color: #515151;
+    padding: 2px 18px;
 }
 
 QMenu::item:selected {
-    color: white;
-    background-color: #0060C0;
+    background-color: rgba(0, 0, 0, 10%);
+    border-radius: 3px;
 }
 
 QMenu::item:disabled {
-    color: #666666;
-    background-color: transparent;
+    color: #b5b5b5;
 }
 
 QMenu::separator {
-    height: 2px;
-    background-color: #5B5B5B;
+    height: 1px;
+    border: none;
+    background-color: #6c6c6c;
     margin: 6px 0;
 }
 
@@ -143,46 +43,245 @@ QMenu::separator {
 /* Window */
 
 MainWindow {
-    background-color: #1E1E1E;
+    background-color: transparent;
 }
 
 MainWindow[custom-style=true] {
     background-color: transparent;
 }
 
-QWidget#clock-widget {
-    font-size: 75px;
-    color: #FEFEFE;
-    font-weight: bold;
+
+QToolButton#IconButton {
+    qproperty-icon: url(":/icon/anchor.svg");
+    min-width: 40px;
+    border: none;
+    padding: 20px;
+    background-color: transparent;
+
+}
+
+
+
+SearchLineEdit#HomeLineEdit {
+    border-radius: 5px;
+    border: 1px solid #7077A1;
+    padding: 8px 8px 8px 15px;
+    background-color: transparent;
+    min-height: 10px;
+    color: grey;
+    margin-right: 35px;
+}
+
+SearchLineEdit:focus#HomeLineEdit {
+    border: 1px solid #424769;
     background-color: transparent;
 }
 
-/* LineEdit */
-QLineEdit#SearchLineEdit {
-    border-radius: 3px;
-    border: 1px solid #3b3d3f;
-    background-color: #505050;
-    padding: 10px;
-}
-
-QLineEdit:focus#SearchLineEdit {
-    border: 1px solid #627188;
-}
-
-QLineEdit::placeholder#SearchLineEdit {
+SearchLineEdit::placeholder#HomeLineEdit {
     color: #767e89;
 }
 
-QPushButton#btnSearch {
-    background-color: #0d6efd;
-    color: #2a2828;
+
+QPushButton#SearchBtn {
+    qproperty-icon: url(":/icon/search.svg");
+    background-color: transparent;
     font-weight: 600;
-    border-radius: 8px;
-    border: 1px solid #0d6efd;
+    padding: 1px 5px;
+    border-radius: 5px;
+    /* border: 1px solid #607274; */
 }
 
-QPushButton:hover#btnSearch,
-QPushButton:focus#btnSearch {
-    background-color: #0b5ed7;
-    border: 3px solid #9ac3fe;
+QPushButton:hover#SearchBtn,
+QPushButton:focus#SearchBtn {
+    background-color: transparent;
+    /* border: 1px solid #607274; */
+    color: #726b6b;
+}
+
+
+QPushButton#ClearBtn {
+    qproperty-icon: url(":/icon/clear.svg");
+    background-color: transparent;
+    font-weight: 600;
+    padding: 1px 5px;
+    border-radius: 5px;
+    /* border: 1px solid #607274; */
+}
+
+QPushButton:hover#ClearBtn,
+QPushButton:focus#ClearBtn {
+    background-color: transparent;
+    /* border: 1px solid #607274; */
+    color: #726b6b;
+}
+
+QPushButton#ClipBoardBtn {
+    /* qproperty-icon: url(":/icon/clipboard.svg"); */
+    background-color: #767e89;
+    font-weight: 600;
+    padding: 1px 5px;
+    border-radius: 5px;
+    /* border: 1px solid #607274; */
+
+}
+
+/* AccountBtn */
+QToolButton#AccountBtn {
+    border: none;
+    background-color: transparent;
+}
+
+QToolButton:hover#AccountBtn,
+QToolButton:focus#AccountBtn {
+    background-color: transparent;
+    /* border: 1px solid #607274; */
+    color: #726b6b;
+}
+
+/* HomeBtn */
+QPushButton#HomeBtn,
+#GalleryBtn,
+#DownloadBtn,
+#SettingBtn {
+    border: none;
+    background-color: transparent;
+}
+
+
+QLabel#LineEditPlaceholderLabel {
+    border-radius: 3px;
+    background-color: transparent;
+}
+
+DownloadingListWidget#DownloadingListWidget {
+    background-color: transparent;
+}
+
+QLabel {
+    color: #8a8a8a;
+    font-weight: 500;
+    font-size: 14px;
+    /*padding-left: 5px;*/
+}
+
+QRadioButton {
+    color: #9e9e9e;
+}
+
+QRadioButton::indicator {
+    width: 16px;
+    height: 16px;
+    padding-right: 10px;
+}
+
+QRadioButton::indicator::unchecked {
+
+    image: url(:/icon/unchecked.svg);
+}
+
+QRadioButton::indicator::checked {
+
+    image: url(:/icon/checked.svg);
+}
+
+
+QCheckBox {
+    color: #9e9e9e;
+    spacing: 5px;
+}
+
+QCheckBox::indicator {
+    width: 16px;
+    height: 16px;
+}
+
+QCheckBox::indicator:unchecked {
+    image: url(:/icon/unchecked.svg);
+}
+
+QCheckBox::indicator:checked {
+    image: url(:/icon/checked.svg);
+}
+
+
+
+QSpinBox {
+    color: #9e9e9e;
+    background-color: transparent;
+    border-radius: 5px;
+    border: 1px solid #7b83b1;
+}
+
+QSpinBox::up-button {
+    subcontrol-origin: border;
+    subcontrol-position: top right;
+    /* position at the top right corner */
+    height: 12px;
+    width: 10px;
+    /* 16 + 2*1px border-width = 15px padding + 3px parent border */
+    image: url(:/icon/arrow-up.svg);
+    padding-right: 4px;
+}
+
+QSpinBox::up-button:disabled,
+QSpinBox::up-button:off {
+    /* off state when value is max */
+    height: 12px;
+    width: 10px;
+    image: url(:/icon/arrow-up-disable.svg);
+}
+
+QSpinBox::down-button {
+    subcontrol-origin: border;
+    subcontrol-position: bottom right;
+    height: 12px;
+    width: 10px;
+    /* 16 + 2*1px border-width = 15px padding + 3px parent border */
+    image: url(:/icon/arrow-down.svg);
+    padding-right: 4px;
+}
+
+QSpinBox::down-button:disabled,
+QSpinBox::down-button:off {
+    height: 12px;
+    width: 10px;
+    /* off state when value in min */
+    image: url(:/icon/arrow-down-disable.svg);
+}
+
+QComboBox {
+    color: #9e9e9e;
+    border: 1px solid #7077A1;
+    border-radius: 5px;
+    padding: 1px 18px 1px 3px;
+    min-width: 6em;
+    background-color: transparent;
+}
+
+QComboBox:on {
+    /* shift the text when the popup opens */
+    /* padding-top: 3px; */
+    /* padding-left: 4px; */
+}
+
+
+QComboBox::down-arrow {
+    image: url(":/icon/arrow-down.svg");
+}
+
+QComboBox::down-arrow:on {
+    /* shift the arrow when popup is open */
+    top: 1px;
+    left: 1px;
+}
+
+
+QComboBox QAbstractItemView {
+    border-width: 1px;
+    /* border-style: solid; */
+    border-radius: 4px;
+    border-color: transparent;
+    background-color: transparent;
+    color: #313238;
+    selection-background-color: rgb(60, 60, 60);
 }
