--- a/sVanilla/resource/style/light.qss
+++ b/sVanilla/resource/style/light.qss
@@ -1,116 +1,16 @@
-/* Window bar */
-
-QWK--WindowBar[bar-active=true] {
-    background-color: transparent;
-}
-
-QWK--WindowBar[bar-active=false] {
-    background-color: #195ABE;
-}
-
-
-/* Title label */
-
-QWK--WindowBar>QLabel#win-title-label {
-    padding: 0;
-    border: none;
-    color: #ECECEC;
-    background-color: transparent;
-    min-height: 28px;
-}
-
-
-/* System buttons */
-
-QWK--WindowBar>QAbstractButton[system-button=true] {
-    qproperty-iconSize: 12px 12px;
-    min-width: 50px;
-    border: none;
-    padding: 0;
-    background-color: transparent;
-}
-
-QWK--WindowBar>QAbstractButton#min-button {
-    qproperty-iconNormal: url(":/icon/minimize.svg");
-    qproperty-iconSize: 12px 12px;
-}
-
-QWK--WindowBar>QAbstractButton#min-button:hover,
-QWK--WindowBar>QAbstractButton#min-button:pressed {
-    background-color: rgba(0, 0, 0, 15%);
-}
-
-QWK--WindowBar>QAbstractButton#max-button {
-    qproperty-iconNormal: url(":/icon/maximize.svg");
-    qproperty-iconChecked: url(":/icon/restore.svg");
-}
-
-QWK--WindowBar>QAbstractButton#max-button:hover,
-QWK--WindowBar>QAbstractButton#max-button:pressed {
-    background-color: rgba(0, 0, 0, 15%);
-}
-
-QWK--WindowBar>QAbstractButton#close-button {
-    qproperty-iconNormal: url(":/icon/close.svg");
-}
-
-QWK--WindowBar>QAbstractButton#close-button:hover,
-QWK--WindowBar>QAbstractButton#close-button:pressed {
-    background-color: #e81123;
-}
-
-
-/* Icon button */
-
-/* QWK--WindowBar>QAbstractButton#icon-button {
-    qproperty-iconNormal: url(":/style/example.png");
-    qproperty-iconSize: 18px 18px;
-    min-width: 40px;
-    border: none;
-    padding: 0;
-    background-color: transparent;
-} */
-
-
-/* Menu Bar */
-
-QMenuBar {
-    background-color: transparent;
-    border: none;
-}
-
-QMenuBar>QToolButton#qt_menubar_ext_button {
-    qproperty-icon: url(":/icon/more-line.svg");
-}
-
-QMenuBar>QToolButton#qt_menubar_ext_button:hover,
-QMenuBar>QToolButton#qt_menubar_ext_button:pressed {
-    background-color: rgba(255, 255, 255, 10%);
-}
-
-QMenuBar::item {
-    color: #EEEEEE;
-    border: none;
-    padding: 8px 12px;
-}
-
-QMenuBar::item:selected {
-    background-color: rgba(255, 255, 255, 10%);
-}
-
-
 /* Menu */
 
 QMenu {
     padding: 4px;
-    background: white;
-    border: 1px solid #E0E0E0;
+    background: #dbdbdb;
+    border: none;
+    border-radius: 5px;
 }
 
 QMenu::indicator {
     left: 6px;
     width: 20px;
-    height: 20px;
+    height: 5px;
 }
 
 QMenu::icon {
@@ -119,21 +19,23 @@ QMenu::icon {
 
 QMenu::item {
     background: transparent;
-    color: #333333;
-    padding: 6px 24px;
+    color: #444343;
+    padding: 2px 18px;
 }
 
 QMenu::item:selected {
     background-color: rgba(0, 0, 0, 10%);
+    border-radius: 3px;
 }
 
 QMenu::item:disabled {
-    color: #CCCCCC;
+    color: #a1a1a1;
 }
 
 QMenu::separator {
-    height: 2px;
-    background-color: #CCCCCC;
+    height: 1px;
+    border: none;
+    background-color: #a7a6a6;
     margin: 6px 0;
 }
 
@@ -148,44 +50,25 @@ MainWindow[custom-style=true] {
     background-color: transparent;
 }
 
-/* LineEdit */
-/* SearchLineEdit#BarLineEdit {
-    border-radius: 3px;
-    border: 1px solid #777777;
-    padding: 0px 5px;
-    background-color: transparent;
-}
 
-SearchLineEdit:focus#BarLineEdit {
-    border: 1px solid #C8C8C8;
-    background-color: transparent;
-} */
-QListWidget#BarListWidget {
-    background-color: transparent;
+QToolButton#IconButton {
+    qproperty-icon: url(":/icon/anchor.svg");
+    min-width: 40px;
     border: none;
-    max-height: 28px;
-    max-width: 130px;
-}
+    padding: 20px;
+    background-color: transparent;
 
-QListWidget::item:selected#BarListWidget {
-    background-color: #dedede;
-    border-radius: 5px;
-    color: #333333;
-    /* border: 1px solid #6a6ea9; */
 }
 
 
-SearchLineEdit::placeholder#BarLineEdit {
-    color: #767e89;
-}
 
 SearchLineEdit#HomeLineEdit {
     border-radius: 5px;
     border: 1px solid #7077A1;
-    padding: 8px 5px;
+    padding: 8px 8px 8px 15px;
     background-color: transparent;
     min-height: 10px;
-    color: grey;
+    margin-right: 35px;
 }
 
 SearchLineEdit:focus#HomeLineEdit {
@@ -197,26 +80,70 @@ SearchLineEdit::placeholder#HomeLineEdit {
     color: #767e89;
 }
 
-QPushButton#btnSearch {
-    qproperty-icon: url(":/icon/clear.svg");
+QLineEdit#FolderSelector {
+    height: 18;
+    border-radius: 5px;
+    border: 1px solid #7077A1;
+    padding: 1px 18px 1px 3px;
     background-color: transparent;
-    color: #fff;
+    min-height: 10px;
+    /* margin-right: 35px; */
+}
+
+QLineEdit:focus#FolderSelector {
+    border: 1px solid #424769;
+    background-color: transparent;
+}
+
+QLineEdit::placeholder#FolderSelector {
+    color: #767e89;
+}
+
+QPushButton#SearchBtn {
+    qproperty-icon: url(":/icon/search.svg");
+    background-color: transparent;
     font-weight: 600;
     padding: 1px 5px;
     border-radius: 5px;
     /* border: 1px solid #607274; */
 }
 
-QPushButton:hover#btnSearch,
-QPushButton:focus#btnSearch {
+QPushButton:hover#SearchBtn,
+QPushButton:focus#SearchBtn {
     background-color: transparent;
     /* border: 1px solid #607274; */
     color: #726b6b;
 }
 
+
+QPushButton#ClearBtn {
+    qproperty-icon: url(":/icon/clear.svg");
+    background-color: transparent;
+    font-weight: 600;
+    padding: 1px 5px;
+    border-radius: 5px;
+    /* border: 1px solid #607274; */
+}
+
+QPushButton:hover#ClearBtn,
+QPushButton:focus#ClearBtn {
+    background-color: transparent;
+    /* border: 1px solid #607274; */
+    color: #726b6b;
+}
+
+QPushButton#ClipBoardBtn {
+    /* qproperty-icon: url(":/icon/clipboard.svg"); */
+    background-color: #767e89;
+    font-weight: 600;
+    padding: 1px 5px;
+    border-radius: 5px;
+    /* border: 1px solid #607274; */
+
+}
+
 /* AccountBtn */
 QToolButton#AccountBtn {
-    qproperty-icon: url(":/icon/account.svg");
     border: none;
     background-color: transparent;
 }
@@ -229,61 +156,12 @@ QToolButton:focus#AccountBtn {
 }
 
 /* HomeBtn */
-QToolButton#HomeBtn {
-    qproperty-icon: url(":/icon/home.svg");
+QPushButton#HomeBtn,
+#GalleryBtn,
+#DownloadBtn,
+#SettingBtn {
     border: none;
     background-color: transparent;
-}
-
-QToolButton:hover#HomeBtn,
-QToolButton:focus#HomeBtn {
-    background-color: transparent;
-    /* border: 1px solid #607274; */
-    color: #726b6b;
-}
-
-
-
-/* GalleryBtn */
-QToolButton#GalleryBtn {
-    qproperty-icon: url(":/icon/gallery.svg");
-    border: none;
-    background-color: transparent;
-}
-
-QToolButton:hover#GalleryBtn,
-QToolButton:focus#GalleryBtn {
-    background-color: transparent;
-    /* border: 1px solid #607274; */
-    color: #726b6b;
-}
-
-/* DownloadBtn */
-QToolButton#DownloadBtn {
-    qproperty-icon: url(":/icon/download.svg");
-    border: none;
-    background-color: transparent;
-}
-
-QToolButton:hover#DownloadBtn,
-QToolButton:focus#DownloadBtn {
-    background-color: transparent;
-    /* border: 1px solid #607274; */
-    color: #726b6b;
-}
-
-/* SettingBtn */
-QToolButton#SettingBtn {
-    qproperty-icon: url(":/icon/setting.svg");
-    border: none;
-    background-color: transparent;
-}
-
-QToolButton:hover#SettingBtn,
-QToolButton:focus#SettingBtn {
-    background-color: transparent;
-    /* border: 1px solid #607274; */
-    color: #726b6b;
 }
 
 
@@ -296,48 +174,132 @@ DownloadingListWidget#DownloadingListWidget {
     background-color: transparent;
 }
 
-.QLabel {
-    color: #313238;
+QLabel {
+    color: #5c5c5c;
     font-weight: 500;
     font-size: 14px;
-    max-height: 24px;
     /*padding-left: 5px;*/
 }
 
-.QSpinBox {
+QRadioButton {
+    color: #2f2f2f;
+}
+
+QRadioButton::indicator {
+    width: 16px;
+    height: 16px;
+    padding-right: 10px;
+}
+
+QRadioButton::indicator::unchecked {
+
+    image: url(:/icon/unchecked.svg);
+}
+
+QRadioButton::indicator::checked {
+
+    image: url(:/icon/checked.svg);
+}
+
+
+QCheckBox {
+    color: #2f2f2f;
+    spacing: 5px;
+}
+
+QCheckBox::indicator {
+    width: 16px;
+    height: 16px;
+}
+
+QCheckBox::indicator:unchecked {
+    image: url(:/icon/unchecked.svg);
+}
+
+QCheckBox::indicator:checked {
+    image: url(:/icon/checked.svg);
+}
+
+
+
+QSpinBox {
+    color: #444343;
     background-color: transparent;
     border-radius: 5px;
     border: 1px solid #7077A1;
 }
 
-.QSpinBox::up-arrow {
-    width: 7px;
-    height: 7px;
-}
-
-.QComboBox {
-    border: 1px solid gray;
-    border-radius: 3px;
-    padding: 1px 18px 1px 3px;
-    min-width: 6em;
-}
-
-.QComboBox::drop-down {
-    subcontrol-origin: padding;
+QSpinBox::up-button {
+    subcontrol-origin: border;
     subcontrol-position: top right;
-    width: 15px;
-
-    border-left-width: 1px;
-    border-left-color: darkgray;
-    border-left-style: solid;
-    /* just a single line */
-    border-top-right-radius: 3px;
-    /* same radius as the QComboBox */
-    border-bottom-right-radius: 3px;
+    /* position at the top right corner */
+    height: 12px;
+    width: 10px;
+    /* 16 + 2*1px border-width = 15px padding + 3px parent border */
+    image: url(:/icon/arrow-up.svg);
+    padding-right: 4px;
 }
 
-.Line {
+QSpinBox::up-button:disabled,
+QSpinBox::up-button:off {
+    /* off state when value is max */
+    height: 12px;
+    width: 10px;
+    image: url(:/icon/arrow-up-disable.svg);
+}
+
+QSpinBox::down-button {
+    subcontrol-origin: border;
+    subcontrol-position: bottom right;
+    height: 12px;
+    width: 10px;
+    /* 16 + 2*1px border-width = 15px padding + 3px parent border */
+    image: url(:/icon/arrow-down.svg);
+    padding-right: 4px;
+}
+
+QSpinBox::down-button:disabled,
+QSpinBox::down-button:off {
+    height: 12px;
+    width: 10px;
+    /* off state when value in min */
+    image: url(:/icon/arrow-down-disable.svg);
+}
+
+QComboBox {
+    height: 20px;
+    color: #444343;
     border: 1px solid #7077A1;
     border-radius: 5px;
-    color: #7077A1;
+    padding: 1px 18px 1px 3px;
+    min-width: 6em;
+    background-color: transparent;
+}
+
+QComboBox:on {
+    /* shift the text when the popup opens */
+    /* padding-top: 3px; */
+    /* padding-left: 4px; */
+}
+
+
+QComboBox::down-arrow {
+    image: url(":/icon/arrow-down.svg");
+}
+
+QComboBox::down-arrow:on {
+    /* shift the arrow when popup is open */
+    top: 1px;
+    left: 1px;
+}
+
+
+QComboBox QAbstractItemView {
+    border-width: 1px;
+    /* border-style: solid; */
+    border-radius: 4px;
+    border-color: transparent;
+    background-color: transparent;
+    color: #313238;
+    selection-background-color: rgb(60, 60, 60);
 }
