--- a/sVanilla/src/SUI/SearchLineEdit.ui
+++ b/sVanilla/src/SUI/SearchLineEdit.ui
@@ -13,7 +13,10 @@
   <property name="windowTitle">
    <string>SearchLineEdit</string>
   </property>
-  <widget class="QPushButton" name="btnSearch">
+  <property name="clearButtonEnabled">
+   <bool>false</bool>
+  </property>
+  <widget class="QPushButton" name="SearchBtn">
    <property name="geometry">
     <rect>
      <x>410</x>
@@ -24,6 +27,19 @@
    </property>
    <property name="cursor">
     <cursorShape>ArrowCursor</cursorShape>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="ClearBtn">
+   <property name="geometry">
+    <rect>
+     <x>300</x>
+     <y>10</y>
+     <width>100</width>
+     <height>32</height>
+    </rect>
    </property>
    <property name="text">
     <string/>
