--- a/sVanilla/resource/sVanilla.qrc
+++ b/sVanilla/resource/sVanilla.qrc
@@ -11,6 +11,8 @@
         <file>icon/more-line.svg</file>
         <file>icon/restore.svg</file>
         <file>icon/clear.svg</file>
+        <file>icon/clipboard.svg</file>
+        <file>icon/history.svg</file>
         <file>icon/account.svg</file>
         <file>icon/folder.svg</file>
         <file>icon/download.svg</file>
