feat(ui): add windows btn

--- a/sVanilla/resource/sVanilla.qrc
+++ b/sVanilla/resource/sVanilla.qrc
@@ -8,6 +8,7 @@
         <file>icon/close.svg</file>
         <file>icon/fullscreen.svg</file>
         <file>icon/maximize.svg</file>
+        <file>icon/minimize.svg</file>
         <file>icon/more-line.svg</file>
         <file>icon/restore.svg</file>
         <file>icon/clear.svg</file>
