--- a/sVanilla/src/ClientUi/MainWindow/WindowBar.ui
+++ b/sVanilla/src/ClientUi/MainWindow/WindowBar.ui
@@ -126,6 +126,30 @@
      </layout>
     </widget>
    </item>
+   <item>
+    <widget class="QWidget" name="systemBtn" native="true">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <layout class="QHBoxLayout" name="horizontalLayout">
+      <property name="leftMargin">
+       <number>0</number>
+      </property>
+      <property name="topMargin">
+       <number>0</number>
+      </property>
+      <property name="rightMargin">
+       <number>0</number>
+      </property>
+      <property name="bottomMargin">
+       <number>0</number>
+      </property>
+     </layout>
+    </widget>
+   </item>
   </layout>
  </widget>
  <resources/>
